# hex

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake-module/: message.cmake
ncurses/include/ncursesw/: ncurses.h  ncurses_dll.h:Zone.Identifier  term.h
src/: main.cpp
